Inserte texto en la rama footer

--- a/Index.html
+++ b/Index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>emiro mercado</h1>
-    
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloremque, quas alias officia incidunt sequi fugit reprehenderit consectetur animi aspernatur rem culpa optio laboriosam aperiam eligendi nobis temporibus molestias velit iure.</p>
+    <h2>Este texto lo puse en la rama footer</h2>
 </body>
 </html>
